# FirePointSys

./: README.md  app.py  banco.db  pyproject.toml  render.yaml  requirements.txt
api/: index.py
static/: ce.css  dashboard.css  form.css  nav.css  token.css
templates/: bar.html  cadastrar_extintor.html  dashboard.html  listar_extintores.html  login.html  nav.html  verificar_token.html
